# satellite-collision-risk-detector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  checklist.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  render.yaml  roadmap.md  spec.md
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: check-spec-deps.md  create-spec.md  explain-spec.md  implement-spec.md  verify-spec.md
.github/: pull_request_template.md
.github/workflows/: deploy.yml
backend/app/: main.py
backend/app/api/: stats.py  (+2 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_acceptance_doc.py  test_architecture_doc.py  test_cors_static.py  test_docker_config.py  test_github_collab.py  test_main.py  test_makefile.py  test_project_setup.py  test_readme.py  test_screenshots.py
docs/: acceptance.md  architecture.md
docs/api/: openapi.yaml
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/mock/: package-lock.json  package.json  server.js
frontend/src/: api.js  cesiumView.js  dashboard.js  infoPanel.js  main.js  risk.js  search.js
specs/spec-S1.1-dependency-declaration/: checklist.md  spec.md
specs/spec-S1.2-developer-commands/: checklist.md  spec.md
specs/spec-S1.3-pydantic-settings/: checklist.md  spec.md
specs/spec-S1.4-fastapi-app-factory/: checklist.md  spec.md
specs/spec-S1.5-cors-static/: checklist.md  spec.md
specs/spec-S1.6-frontend-scaffold/: checklist.md  spec.md
specs/spec-S10.1-seed-script/: checklist.md  spec.md
(+155 files in other folders)
