[project]
name = "satellite-tracking-system"
version = "0.1.0"
description = "Satellite collision risk detector — TLE ingestion, SGP4 propagation, conjunction screening, 3D globe visualization."
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "skyfield>=1.46",
    "sgp4>=2.22",
    "numpy>=1.26",
    "scipy>=1.13",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
